--- a/app.tpl.service
+++ b/app.tpl.service
@@ -12,8 +12,8 @@ LimitNOFILE=1024
 Restart=on-failure
 RestartSec=10
 
-WorkingDirectory=/var/www
-ExecStart=/usr/bin/sudo /var/www/// {{.name}} serve
+WorkingDirectory=/var/www/// {{.name}}
+ExecStart=/usr/bin/sudo /var/www/// {{.name}}/// {{.name}} serve
 
 PermissionsStartOnly=true
 StandardOutput=syslog
