--- a/config/config.json
+++ b/config/config.json
@@ -33,8 +33,8 @@
         "base": "./views",
         "shared": ["./views/shared"],
         "extension": "tpl",
-        "delim_left":"{{",
-        "delim_right":"}}"
+        "delim_left":"{{ `{{` }}",
+        "delim_right":"{{ `}}` }}"
     }
     {{end}}
 }
