--- a/config/config.env
+++ b/config/config.env
@@ -1,20 +1,20 @@
 PROD=false
-{{if eq .cache "redis"}}
+<%if eq .cache "redis"%>
 REDIS.HOST="localhost:6379"
 REDIS.CACHE_DB=1
-{{end}}
-{{if eq .database "mongo"}}
-DATABASE.NAME="{{ .name }}"
+<%end%>
+<%if eq .database "mongo"%>
+DATABASE.NAME="<% .name %>"
 DATABASE.TTL=10
 DATABASE.PORT=27017
 DATABASE.REPLICA_SET=""
-{{else if eq .database "mysql"}}
-DATABASE.NAME="{{ .name }}"
+<%else if eq .database "mysql"%>
+DATABASE.NAME="<% .name %>"
 DATABASE.HOST="127.0.0.1"
 DATABASE.USERNAME="root"
 DATABASE.PASSWORD=""
-{{end}}
-{{if eq .web "y"}}
+<%end%>
+<%if eq .web "y"%>
 WEB.SSL=false
 WEB.LOG=true
 WEB.PORT=8888
@@ -23,4 +23,4 @@ WEB.PUBLIC="./public"
 
 VIEW.BASE="./views"
 VIEW.EXTENSION="tpl"
-{{end}}
+<%end%>
