add postgres support

--- a/config/config.env
+++ b/config/config.env
@@ -13,6 +13,12 @@ DATABASE.NAME="<% .name %>"
 DATABASE.HOST="127.0.0.1"
 DATABASE.USERNAME="root"
 DATABASE.PASSWORD=""
+<%else if eq .database "postgres"%>
+DATABASE.NAME="<% .name %>"
+DATABASE.HOST="127.0.0.1"
+DATABASE.USERNAME="postgres"
+DATABASE.PASSWORD=""
+DATABASE.PORT=""
 <%end%>
 <%if eq .web "y"%>
 WEB.SSL=false
